# CavaAI

./: .dockerignore  .env.bak  .env.example  .gitignore  ANALISIS_MEJORAS.md  DATA_SOURCES_SETUP.md  Dockerfile  Dockerfile.dev  FIX_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENTS_SUMMARY.md  INSTRUCCIONES_DESPLIEGUE.md  MONGODB_SETUP.md  PAGES_STRUCTURE.md  PERFORMANCE.md  QUICK_FIX.md  README.md  RESUMEN_FINAL.md  USAGE_EXAMPLES.md  VERCEL_DEPLOY.md  VERCEL_DEPLOYMENT.md  check_models.js  docker-compose.yml  docker.env.example  eslint.config.mjs  investment_thesis.db  next.config.ts  package-lock.json  package.json  playwright.config.ts  push-to-github.ps1  start-app.bat  start-docker.bat  tsconfig.json
app/: error.tsx  (+4 more)
data-engine/: .dockerignore  Dockerfile  alembic.ini  brute_force_fields.py  cache.db  debug_garp_values.py  funds.db  funds_cache.json  main.py  openapi.json  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  test_endpoints_availability.py  test_screener.py  valid_fields.txt
data-engine/alembic/: env.py
data-engine/app/: __init__.py  main.py  seed.py
data-engine/evals/: financial_engine_v1.json
data-engine/modules/: analytics_service.py  cache.py  fmp.py  funds.py  garp.py  knowledge_base.py  portfolio_analytics.py  return_engine.py  sec_edgar.py  storage.py  vector_store.py  yfinance_utils.py
data-engine/quantstats/: __init__.py  _compat.py  _montecarlo.py  _numpy_compat.py  report.html  report_alpha_decay.html  report_montecarlo.html  report_simple.html  reports.py  stats.py  utils.py
data-engine/routers/: __init__.py  analytics.py  fundamentals.py  knowledge.py  market.py
data-engine/scripts/: export_openapi.py  render_explicit_migration.py  run_financial_evals.py
data-engine/tests/: conftest.py  test_analytics_endpoints.py  test_calculated_metrics.py  test_company_framework.py  test_decision_learning_graph.py  test_document_ingestion.py  test_document_storage.py  test_driver_assumptions.py  test_feed_ingestion.py  test_fundamental_persistence.py  test_intelligence_pipeline.py  test_knowledge_base.py  test_knowledge_library.py  test_llm_provider.py  test_long_term_model.py  test_main_bootstrap.py  test_market_opportunity_engine.py  test_market_refresh.py  test_materiality_service.py  test_migrations.py  test_p1_financial_intelligence.py  test_portfolio_analytics.py  test_portfolio_fx.py  test_rate_limit.py  test_research_automation.py  test_research_os.py  test_return_engine.py  test_router_contracts.py  test_screener_service.py  test_sector_valuation_engines.py  test_security_boundaries.py  test_sotp_engine.py  test_tenant_isolation.py  test_universal_search.py  test_valuation_integrity.py  (+1 more)
(+416 files in other folders)
