[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cavaai-data-engine"
version = "0.1.0"
description = "FastAPI data engine for CavaAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "lxml>=5.0.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "tabulate>=0.9.0",
    "python-dateutil>=2.8.0",
    "arch>=6.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.9.0",
    "redis>=5.0.0",
    "sentence-transformers>=3.0.0",
    "PyPDF2>=3.0.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["modules*", "routers*", "quantstats*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
